[package]
name = "leaveme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
config = "0.14.0"
lazy_static = "1.4.0"
rocket = "0.5.0"
serde = { version = "1.0.201", features = ["derive"] }
