[package]
name = "leaveme"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
config = "0.14.0"
chrono = "0.4.38"
lazy_static = "1.4.0"
rocket = { version = "0.5.0" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
slack-morphism = { version = "2.2", features = ["hyper", "axum"] }
slack-http-verifier = "0.1.2"
url_encoded_data = "0.6.1"
